tweaks to 11.1 features page

--- a/netbeans.apache.org/src/content/download/nb111/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb111/index.asciidoc
@@ -37,7 +37,7 @@ TIP: The LTS release of the Apache NetBeans 11 cycle is Apache NetBeans 11.0. Th
 
 == Java EE
 
-The highlights of enhancements in the Java EE area are the new Java EE 8 support, as well as the new and updated integration for Payara and GlassFish.
+The highlights of enhancements in the Java EE area are the new Java EE 8 support, as well as the new and updated integration with Payara and GlassFish.
 
 - Java EE 8 support, for the first time, for Maven-based and Gradle-based Web applications. The new Java EE 8 support provides the ability to create Java EE 8 applications and deploy to a Java EE 8 container, with new "webapp-javaee8" Maven archetype created for use with Apache NetBeans.
 
@@ -52,7 +52,7 @@ The highlights of enhancements in the Java area are the support for new Java lan
 
 === Java Editor
 
-The highlights of enhancements specifically in the Java Editor area are the support for new Java language features, including those provided by JEP-325 and JEP-330.
+The highlights of enhancements specifically in the Java Editor area are the support for new Java language features, including those provided by JEP-325 and JEP-330, as well as the initial support for inline parameters.
 
 - Integration of support for JEP-330: link:https://github.com/apache/netbeans/pull/1171[https://github.com/apache/netbeans/pull/1171]
 - Initial support for inline parameter name hints for Java: link:https://github.com/apache/netbeans/pull/1247[https://github.com/apache/netbeans/pull/1247]
