--- a/netbeans.apache.org/src/content/download/nb111/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb111/index.asciidoc
@@ -72,6 +72,8 @@ image::code-completion-multiple-case.png[]
 
 - OpenJFX samples included, with thanks to the Gluon team: link:https://github.com/apache/netbeans/pull/1241[https://github.com/apache/netbeans/pull/1241]
 
+image::openjfx-samples.png[]
+
 === Maven
 
 - Java compiler args, e.g., "--enable-preview", passed to Java editor from Maven: link:https://github.com/apache/netbeans/pull/1173[https://github.com/apache/netbeans/pull/1173]
