Adding Maven POM XML for enable-preview support

--- a/netbeans.apache.org/src/content/download/nb111/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb111/index.asciidoc
@@ -77,6 +77,24 @@ image::openjfx-samples.png[]
 === Maven
 
 - Java compiler args, e.g., "--enable-preview", passed to Java editor from Maven: link:https://github.com/apache/netbeans/pull/1173[https://github.com/apache/netbeans/pull/1173]
+
+[source,xml]
+----
+<build>
+   <plugins>
+      <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.0</version>
+          <configuration>
+              <compilerArgs>
+                    <arg>--enable-preview</arg>
+              </compilerArgs>
+         </configuration>
+     </plugin>
+  </plugins>
+</build>
+----
+
 - JaCoCo Maven integration is broken in NB 11.0: link:https://github.com/apache/netbeans/pull/1286[https://github.com/apache/netbeans/pull/1286]
 - Prevent Maven libraries from being excluded: link:https://github.com/apache/netbeans/pull/1271[https://github.com/apache/netbeans/pull/1271]
 
