Add jacoco POM XML to item describing fix in this area

--- a/netbeans.apache.org/src/content/download/nb111/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb111/index.asciidoc
@@ -96,6 +96,33 @@ image::openjfx-samples.png[]
 ----
 
 - JaCoCo Maven integration is broken in NB 11.0: link:https://github.com/apache/netbeans/pull/1286[https://github.com/apache/netbeans/pull/1286]
+
+[source,xml]
+----
+<plugin>
+    <groupId>org.jacoco</groupId>
+    <artifactId>jacoco-maven-plugin</artifactId>
+    <version>0.8.3</version>
+    <executions>
+        <execution>
+            <goals>
+                <goal>prepare-agent</goal>
+            </goals>
+        </execution>
+        <execution>
+            <id>report</id>
+            <phase>prepare-package</phase>
+            <goals>
+                <goal>report</goal>
+            </goals>
+            <configuration>
+               <outputDirectory>${project.reporting.outputDirectory}/jacoco_test</outputDirectory>
+            </configuration>
+        </execution>
+    </executions>
+</plugin>
+----
+
 - Prevent Maven libraries from being excluded: link:https://github.com/apache/netbeans/pull/1271[https://github.com/apache/netbeans/pull/1271]
 
 === Gradle
