--- a/netbeans.apache.org/src/content/download/nb111/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb111/index.asciidoc
@@ -64,6 +64,7 @@ image::inline-parameters.png[]
 image::code-completion-multiple-case.png[]
 
 - Hint for converting to JEP-325 preview feature for switch expressions: link:https://github.com/apache/netbeans/pull/1193[https://github.com/apache/netbeans/pull/1193]
+- Hint to turn on Preview Features in Maven-based Java projects: link:https://github.com/apache/netbeans/pull/1285[https://github.com/apache/netbeans/pull/1285]
 - Java Migration profiles: link:https://github.com/apache/netbeans/pull/1212[https://github.com/apache/netbeans/pull/1212]
 - "main" is a new shortcut, that does the same as "psvm", i.e., creates 'public static void main': link:https://github.com/apache/netbeans/pull/1176[https://github.com/apache/netbeans/pull/1176]
 - Fixing automatic Jigsaw module name generation: link:https://github.com/apache/netbeans/pull/1274[https://github.com/apache/netbeans/pull/1274]
