Tweaks for Kotlin in 11.1 features page

--- a/netbeans.apache.org/src/content/download/nb111/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb111/index.asciidoc
@@ -143,12 +143,12 @@ image::gradle-jigsaw.png[]
 
 === Other
 
-Other enhancements related to the Java area are listed below.
+Other enhancements broadly related to the Java area are listed below.
 
 - Using Graal.js 19.0.0 via Scripting in platform/core.network: link:https://github.com/apache/netbeans/pull/1092[https://github.com/apache/netbeans/pull/1092]
 - Separate Truffle source caches between multiple debugging sessions: link:https://github.com/apache/netbeans/pull/1252[https://github.com/apache/netbeans/pull/1252]
-- Syntax coloring for .kt files: link:https://github.com/apache/netbeans/pull/1228[https://github.com/apache/netbeans/pull/1228]
-- Correct license information for kotlin icon/grammar: link:https://github.com/apache/netbeans/pull/1229[https://github.com/apache/netbeans/pull/1229]
+- Syntax coloring for Kotlin ".kt" files: link:https://github.com/apache/netbeans/pull/1228[https://github.com/apache/netbeans/pull/1228]
+- Correct license information for Kotlin icon/grammar: link:https://github.com/apache/netbeans/pull/1229[https://github.com/apache/netbeans/pull/1229]
 
 == Web Frontend: JavaScript/HTML5/PHP
 
