Website structural updates for NB 11.1. (#401)
* Website structural updates for NB 11.1.

Changed main menu download link to /download; simplified main download page; added archive and dev sections;
added new front page template with news and reverted page-noside for other pages.

* Change release date to July 22; add note that installers are coming soon.

--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -29,74 +29,36 @@ for important requirements for download pages for Apache projects.
 :jbake-status: published
 :keywords: Apache NetBeans releases
 :description: Apache NetBeans Releases Page
-:toc: left
-:toc-title:
 :linkattrs:
 
-[[releases]]
+Apache NetBeans is released four times a year. Our April release is a
+long-term support (LTS) release that benefits from our famous NetCAT
+community testing process, and will remain available and supported for
+a year.  Our other quarterly releases provide early access to new
+features. See link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[full release schedule].
 
-== Apache NetBeans 11.0
+== Apache NetBeans 11 feature update 1 (NB 11.1)
 
-Apache NetBeans 11.0 is the latest version of the IDE. It was released on April 4, 2019.
+Latest version of the IDE, released on July 22, 2019.
 
-link:nb110/index.html[Features, role="button"] link:nb110/nb110.html[Download, role="button success"]
+link:/download/nb111/index.html[Features, role="button"] link:/download/nb111/nb111.html[Download, role="button success"]
 
+== Apache NetBeans 11 LTS (NB 11.0)
 
-== Apache NetBeans 10.0
+Latest LTS version of the IDE, released on April 4, 2019.
 
-Apache NetBeans 10.0 was released on December 27, 2018.
+link:/download/nb110/index.html[Features, role="button"] link:/download/nb110/nb110.html[Download, role="button success"]
 
-link:nb100/index.html[Features, role="button"] link:nb100/nb100.html[Download, role="button success"]
+== Older releases
 
-[[previous]]
-== Apache NetBeans 9.0
+Older Apache NetBeans releases and pre-Apache NetBeans releases can still be
+downloaded, but are no longer supported.
 
-Apache NetBeans 9.0 was released on the July 29, 2018.
+link:/download/archive/index.html[Find out more, role="button"]
 
-link:nb90/[Features, role="button"] link:nb90/nb90.html[Download, role="button success"] 
+== Daily builds and building from source
 
-== Pre-Apache NetBeans versions
+All Apache NetBeans source code is freely available to build yourself, or you can
+download (unsupported) daily development builds.
 
-- https://netbeans.org/downloads/8.2/
-- https://netbeans.org/downloads/8.1/
-- https://netbeans.org/downloads/8.0/
-- https://netbeans.org/downloads/7.4/
-
-== Release schedule
-
-Please visit the link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[release schedule page] for the full release schedule.
-
-== Daily builds
-
-Please visit link:https://builds.apache.org/job/netbeans-linux/[https://builds.apache.org/job/netbeans-linux/] and link:https://builds.apache.org/job/netbeans-windows/[https://builds.apache.org/job/netbeans-windows/] for the daily builds.
-
-[[source]]
-== Building from source
-
-You can of course build Apache NetBeans from source. To do so:
-
-. Clone the https://github.com/apache/netbeans GitHub repository.
-. Install Oracle's Java 8 or Open JDK v8.
-. Install Apache Ant 1.10 or greater (https://ant.apache.org/).
-
-Once you're all set just enter the `netbeans` directory and type:
-
-- `ant` to build the Apache NetBeans IDE.
-  ** Once built, the IDE bits are placed in the `./nbbuild/netbeans` directory. You can run the IDE from within the `netbeans` directory by typing `./nbbuild/netbeans/bin/netbeans` on unixes (for Windows the command is equivalent).
-- `ant tryme` to run the Apache NetBeans IDE.
-
-For details, go here: https://cwiki.apache.org/confluence/display/NETBEANS/Development+Environment
-
-Now that you have built Apache NetBeans from source you may want to link:/participate/submit-pr.html[submit a pull request].
-
-[[repos]]
-=== Repositories
-
-This is a list of Apache NetBeans repositories:
-
-- https://github.com/apache/netbeans The main source code repository.
-- https://github.com/apache/netbeans-website This website's repository.
-- https://github.com/apache/netbeans-website-cleanup A repository used to clean up existing documentation from http://netbeans.org
-- Emilian Bold has converted the previous Mercurial repository (http://hg.netbeans.org) to git, for historical reference, and has kindly uploaded it to GitHub at https://github.com/emilianbold/netbeans-releases. Thanks, Emilian!
-
-
+link:/download/dev/index.html[Find out more, role="button"]
