--- a/netbeans.apache.org/src/content/download/nb111/nb111.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb111/nb111.asciidoc
@@ -24,7 +24,7 @@ for important requirements for download pages for Apache projects.
 
 ////
 = Downloading Apache NetBeans 11.1 
-:jbake-type: page
+:jbake-type: page-noaside
 :jbake-tags: download
 :jbake-status: published
 :keywords: Apache NetBeans 11.1 Download
@@ -33,4 +33,61 @@ for important requirements for download pages for Apache projects.
 :toc-title:
 :icons: font
 
-Apache NetBeans 11.1 (work in progress).
+Apache NetBeans 11.1 was released on July 22, 2019.
+See link:/download/nb111/index.html[Apache NetBeans 11.1 Features] for a full list of features.
+
+////
+NOTE: It's mandatory to link to the source. It's optional to link to the binaries.
+NOTE: It's mandatory to link against https://www.apache.org for the sums & keys. https is recommended.
+NOTE: It's NOT recommended to link to github.
+////
+Apache NetBeans 11.1 is available for download from your closest Apache mirror.
+
+- Binaries: 
+link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.1/netbeans-11.1-bin.zip[netbeans-11.1-bin.zip] (
+link:https://www.apache.org/dist/netbeans/netbeans/11.1/netbeans-11.1-bin.zip.sha512[SHA-512],
+link:https://www.apache.org/dist/netbeans/netbeans/11.1/netbeans-11.1-bin.zip.asc[PGP ASC])
+
+- Installers: Coming soon!
+
+- Source: link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.1/netbeans-11.1-source.zip[netbeans-11.1-source.zip] 
+(link:https://www.apache.org/dist/netbeans/netbeans/11.1/netbeans-11.1-source.zip.sha512[SHA-512],
+link:https://www.apache.org/dist/netbeans/netbeans/11.1/netbeans-11.1-source.zip.asc[PGP ASC])
+
+- Javadoc for this release is available at https://bits.netbeans.org/11.1/javadoc
+
+////
+NOTE: Using https below is highly recommended.
+////
+Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#verify[verify the integrity]
+of the downloaded files using the PGP signatures (.asc file) or a hash (.sha512 files).
+The PGP keys used to sign this release are available link:https://www.apache.org/dist/netbeans/KEYS[here].
+
+
+== Building from source
+
+To build Apache NetBeans 11.1 from source you need:
+
+. Oracle's Java 8 or Open JDK v8.
+. Apache Ant 1.10 or greater (https://ant.apache.org).
+
+Once you have everything installed then:
+
+1. Unzip link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.1/netbeans-11.1-source.zip[netbeans-11.1-source.zip]
+in a directory of your liking.
+2. `cd` to that directory, and then run `ant` to build the Apache NetBeans IDE.
+Once built you can run the IDE by typing `./nbbuild/netbeans/bin/netbeans`
+
+== Community approval
+
+As in any other Apache Project, the Apache NetBeans Community approved this release
+through the following voting processes in our link:/community/mailing-lists.html[mailing lists] :
+
+- link:https://lists.apache.org/thread.html/481ef107e6f5d8d6dfb35a831134bbbce3c6adb725e915ea8e5159d6@%3Cdev.netbeans.apache.org%3E[PMC vote]
+- link:https://lists.apache.org/thread.html/b5d559bf860a5e6f5a908afec791c07ef1e0d0d16e6c739c73c454d9@%3Cdev.netbeans.apache.org%3E[PMC vote result]
+
+== Earlier releases
+
+Please visit the link:/download/index.html[Apache NetBeans Download page]
+for further details.
+
