--- a/netbeans.apache.org/src/content/download/nb111/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb111/index.asciidoc
@@ -18,7 +18,7 @@
      under the License.
 ////
 = Apache NetBeans 11.1 Features
-:jbake-type: page
+:jbake-type: page-noaside
 :jbake-tags: 11.1 features
 :jbake-status: published
 :keywords: Apache NetBeans 11.1 IDE features
@@ -30,10 +30,13 @@
 :syntax: true
 :source-highlighter: pygments
 :experimental:
+:linkattrs:
 
 Apache NetBeans 11.1 is the first Apache NetBeans release outside the Apache Incubator and the link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[first release of the new quarterly release cycle].
 
-TIP: The LTS release of the Apache NetBeans 11 cycle is Apache NetBeans 11.0. The 11.1 release has not been tested as heavily as the LTS release and may therefore be less stable. Use 11.1 to use the latest features and to provide feedback for the next LTS release, scheduled for April 2020. Go here to download  link:https://netbeans.apache.org/download/nb110/nb110.html[Apache NetBeans 11.0], the current LTS release.
+TIP: The LTS release of the Apache NetBeans 11 cycle is Apache NetBeans 11.0. The 11.1 release has not been tested as heavily as the LTS release and may therefore be less stable. Use 11.1 to use the latest features and to provide feedback for the next LTS release, scheduled for April 2020. Go here to download  link:/download/nb110/nb110.html[Apache NetBeans 11.0], the current LTS release.
+
+link:/download/nb111/nb111.html[Download, role="button success"]
 
 == Java EE
 
