--- a/netbeans.apache.org/src/content/download/nb110/nb110.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb110/nb110.asciidoc
@@ -36,6 +36,8 @@ for important requirements for download pages for Apache projects.
 Apache NetBeans (incubating) 11.0 was announced on April the 4th, 2019.
 See link:/download/nb110/index.html[Apache NetBeans 11.0 Features] for a full list of features.
 
+TIP: Since releasing 11.0, feature update 1, that is, Apache NetBeans 11.1, has been released. The LTS release of the Apache NetBeans 11 cycle is Apache NetBeans 11.0. The 11.1 release has not been tested as heavily as the LTS release and may therefore be less stable. Use 11.1 to use the latest features and to provide feedback for the next LTS release, scheduled for April 2020. Go here to download  link:/download/nb111/nb111.html[Apache NetBeans 11.1], the feature update, which needs to be installed instead of 11.0, i.e., there is no automatic update between the two releases.
+
 ////
 NOTE: It's mandatory to link to the source. It's optional to link to the binaries.
 NOTE: It's mandatory to link against https://www.apache.org for the sums & keys. https is recommended.
