--- a/netbeans.apache.org/src/content/download/nb111/nb111.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb111/nb111.asciidoc
@@ -48,7 +48,17 @@ link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.1/netbeans-11.1-
 link:https://www.apache.org/dist/netbeans/netbeans/11.1/netbeans-11.1-bin.zip.sha512[SHA-512],
 link:https://www.apache.org/dist/netbeans/netbeans/11.1/netbeans-11.1-bin.zip.asc[PGP ASC])
 
-- Installers: Coming soon!
+- Installers:
+ 
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-windows-x64.exe[Apache-NetBeans-11.1-bin-windows-x64.exe] (
+link:https://www.apache.org/dist/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-windows-x64.exe.sha512[SHA-512],
+link:https://www.apache.org/dist/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-windows-x64.exe.asc[PGP ASC])
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-linux-x64.sh[Apache-NetBeans-11.1-bin-linux-x64.sh] (
+link:https://www.apache.org/dist/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-linux-x64.sh.sha512[SHA-512],
+link:https://www.apache.org/dist/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-linux-x64.sh.asc[PGP ASC])
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-macosx.dmg[Apache-NetBeans-11.1-bin-macosx.dmg] (
+link:https://www.apache.org/dist/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-macosx.dmg.sha512[SHA-512],
+link:https://www.apache.org/dist/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-macosx.dmg.asc[PGP ASC])
 
 - Source: link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.1/netbeans-11.1-source.zip[netbeans-11.1-source.zip] 
 (link:https://www.apache.org/dist/netbeans/netbeans/11.1/netbeans-11.1-source.zip.sha512[SHA-512],
