List deployment platforms on Download page
After this one is approved, will do the same for the other Download pages.

--- a/netbeans.apache.org/src/content/download/nb111/nb111.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb111/nb111.asciidoc
@@ -74,6 +74,11 @@ of the downloaded files using the PGP signatures (.asc file) or a hash (.sha512 
 The PGP keys used to sign this release are available link:https://www.apache.org/dist/netbeans/KEYS[here].
 
 
+== Deployment platforms
+
+Apache NetBeans 11.1 runs on JDK 8, 9, 10, 11, and 12.
+
+
 == Building from source
 
 To build Apache NetBeans 11.1 from source you need:
