Adding deployment platforms info to 11.0 Download page

--- a/netbeans.apache.org/src/content/download/nb110/nb110.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb110/nb110.asciidoc
@@ -67,6 +67,10 @@ Also see the following YouTube clip:
 
 video::vCN_XvXQzzo[youtube, title="The Rough Guide to Apache NetBeans 11.0"]
 
+== Deployment platforms
+
+Apache NetBeans 11.0 runs on JDK 8, 9, 10, 11, and 12.
+
 == Building from source
 
 To build Apache NetBeans (incubating) 11.0 from source you need:
