Code donation section

--- a/netbeans.apache.org/src/content/participate/index.asciidoc
+++ b/netbeans.apache.org/src/content/participate/index.asciidoc
@@ -35,7 +35,11 @@ Here are some ideas:
 
 == Contributing code
 
-See link:submit-pr.html[contributing code] to learn how to contribute code to the Apache NetBeans project.
+You may want to fix issues or provide a new functionality that is your personal work to Apache NetBeans project. 
+You will need to follow the link:submit-pr.html#contributing-code[contributing code] procedure to learn how to contribute code to the Apache NetBeans project.
+
+If your contribution code is owned or developped in another organization outside Apache. Your organization may want to *donate* this contribution to Apache NetBeans project.
+You will need to follow this link:submit-pr.html#donating-code[donating code] procedure.
 
 == Reporting issues
 
