--- a/netbeans.apache.org/src/content/participate/submit-pr.asciidoc
+++ b/netbeans.apache.org/src/content/participate/submit-pr.asciidoc
@@ -16,7 +16,7 @@
      specific language governing permissions and limitations
      under the License.
 ////
-= Submitting Pull Requests
+= Contributing Code
 :jbake-type: page
 :jbake-tags: community
 :jbake-status: published
@@ -26,7 +26,7 @@
 :toclevels: 4
 :toc-title: 
 
-[contributing-code]
+[[contributing-code]]
 Contributing code to the Apache NetBeans project is not very different to contributing code for any other Apache software project,
 so the link:https://www.apache.org/dev/contributors[Apache's Guide for New Project Contributors] is worth a read.
 
@@ -135,5 +135,24 @@ https://git-scm.com/book/en/v2/Git-Tools-Rewriting-History
 
 After submission (and certainly after someone starts reviewing the PR) you shouldn't touch the PR's history. 
 
+[[donating-code]]
+= Donating Code
 
+You may find official information here: https://incubator.apache.org/ip-clearance/
+
+Donator can use pull request as show above. (squashed for having a better readability of the hash)
+
+In order to accept a donation the Apache NetBeans PMC should do a vote to accept the intention of donation.
+
+PMC will have to setup a form to append the list at https://incubator.apache.org/ip-clearance/ and open a JIRA issue to track donation.
+
+Donator must ensure that the following step are ok (PMC member need to check): 
+
+- His company fill and send a Software Grant and/or corporate CLA if applicable
+- Any contributor involved in donated code has an individual CLA
+- License are correct and compatible with Apache.
+
+Once every step are ok, PMC will call a lazy vote at general@incubator.
+
+If no issue are detected the code can be merged.
 
