--- a/netbeans.apache.org/src/content/download/nb112/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb112/index.asciidoc
@@ -32,4 +32,18 @@
 :experimental:
 :linkattrs:
 
-Apache NetBeans 11.2 is coming soon.
+Apache NetBeans 11.2 is the second Apache NetBeans release outside the Apache Incubator and the link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[second release of the new quarterly release cycle].
+
+TIP: The LTS release of the Apache NetBeans 11 cycle is Apache NetBeans 11.0. The 11.1 and 11.2 releases have not been tested as heavily as the LTS release and may therefore be less stable. Use 11.2 to use the latest features and to provide feedback for the next LTS release, scheduled for April 2020. Go here to download  link:/download/nb110/nb110.html[Apache NetBeans 11.0], the current LTS release.
+
+link:/download/nb111/nb111.html[Download, role="button success"]
+
+== Java
+
+The highlights of enhancements in the Java area are...
+
+== PHP
+
+The highlights of enhancements in the PHP area are...
+
+
