--- a/netbeans.apache.org/src/content/download/nb112/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb112/index.asciidoc
@@ -36,7 +36,12 @@ Apache NetBeans 11.2 is the second Apache NetBeans release outside the Apache In
 
 TIP: The LTS release of the Apache NetBeans 11 cycle is Apache NetBeans 11.0. The 11.1 and 11.2 releases have not been tested as heavily as the LTS release and may therefore be less stable. Use 11.2 to use the latest features and to provide feedback for the next LTS release, scheduled for April 2020. Go here to download  link:/download/nb110/nb110.html[Apache NetBeans 11.0], the current LTS release.
 
-link:/download/nb111/nb111.html[Download, role="button success"]
+== Release Highlights
+
+- JDK 13 support
+- PHP 7.4 support
+- JavaScript parser is now correctly licensed and no longer needs to be installed separately: link:https://github.com/apache/netbeans/pull/1407[https://github.com/apache/netbeans/pull/1407]
+- Enhancement to the installer enables subsets of Apache NetBeans to be installed: https://github.com/apache/netbeans/pull/1505
 
 == Java
 
@@ -46,4 +51,14 @@ The highlights of enhancements in the Java area are...
 
 The highlights of enhancements in the PHP area are...
 
+== Important Fixes
+
+- Maven-based NetBeans modules can now be created again: link:https://github.com/apache/netbeans/commit/9e32a853c38f2b7514a42a3395a673d8ad06300f[https://github.com/apache/netbeans/commit/9e32a853c38f2b7514a42a3395a673d8ad06300f]
+- "Copy Dependent Libraries" in Ant-based projects works again: link:https://github.com/apache/netbeans/pull/1469[https://github.com/apache/netbeans/pull/1469]
+- OpenJFX Gluon samples are now correctly registered: link:https://github.com/apache/netbeans/pull/1503[https://github.com/apache/netbeans/pull/1503]
+
+== Miscellaneous
+
+- The donation of the C/C++ features from Oracle to Apache was not complete at the time of the 11.2 release, though it is not far off, and the 11.3 release is scheduled to focus primarily on the integration of the C/C++ features, once they land in the Apache NetBeans GitHub.
+- WildFly integration is supported by means of the link:http://plugins.netbeans.org/plugin/76472/wildfly-application-server[WildFly Application Server] plugin located in the Plugin Portal.
 
