More content, new sections

--- a/netbeans.apache.org/src/content/download/nb112/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb112/index.asciidoc
@@ -43,22 +43,38 @@ TIP: The LTS release of the Apache NetBeans 11 cycle is Apache NetBeans 11.0. Th
 - JavaScript parser is now correctly licensed and no longer needs to be installed separately: link:https://github.com/apache/netbeans/pull/1407[https://github.com/apache/netbeans/pull/1407]
 - Enhancement to the installer enables subsets of Apache NetBeans to be installed: https://github.com/apache/netbeans/pull/1505
 
-== Java
+== Newly Introduced Features
+
+=== Java
 
 The highlights of enhancements in the Java area are...
 
-== PHP
+=== PHP
 
 The highlights of enhancements in the PHP area are...
 
-== Important Fixes
+== Enhancements and Fixes
+
+Closed issues for 11.2: link:https://github.com/apache/netbeans/milestone/3?closed=1[https://github.com/apache/netbeans/milestone/3?closed=1]
+
+The highlights of the enhancements and fixes are listed below.
+
+=== Enhancements
+
+Gradle enhancements include being able to read the JDK's "--enable-preview": https://github.com/apache/netbeans/pull/1494
+Amazon-related updates: https://github.com/apache/netbeans/pull/1312
+LSP server for Java: https://github.com/apache/netbeans/pull/926
+HTML5 attribute syntax support: https://github.com/apache/netbeans/pull/1380
+Cleaned up Welcome Screen no longer refers to Oracle backends: https://github.com/apache/netbeans/pull/1457
+
+=== Fixes
 
 - Maven-based NetBeans modules can now be created again: link:https://github.com/apache/netbeans/commit/9e32a853c38f2b7514a42a3395a673d8ad06300f[https://github.com/apache/netbeans/commit/9e32a853c38f2b7514a42a3395a673d8ad06300f]
 - "Copy Dependent Libraries" in Ant-based projects works again: link:https://github.com/apache/netbeans/pull/1469[https://github.com/apache/netbeans/pull/1469]
 - OpenJFX Gluon samples are now correctly registered: link:https://github.com/apache/netbeans/pull/1503[https://github.com/apache/netbeans/pull/1503]
 
-== Miscellaneous
+== Notes
 
-- The donation of the C/C++ features from Oracle to Apache was not complete at the time of the 11.2 release, though it is not far off, and the 11.3 release is scheduled to focus primarily on the integration of the C/C++ features, once they land in the Apache NetBeans GitHub.
+- The donation of the C / C++ features from Oracle to Apache was not complete at the time of the 11.2 release, though it is not far off, and the 11.3 release (January 2020) is scheduled to focus primarily on the integration of the C/C++ features, once they land in the Apache NetBeans GitHub.
 - WildFly integration is supported by means of the link:http://plugins.netbeans.org/plugin/76472/wildfly-application-server[WildFly Application Server] plugin located in the Plugin Portal.
 
