--- a/netbeans.apache.org/src/content/download/nb112/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb112/index.asciidoc
@@ -43,7 +43,7 @@ TIP: The LTS release of the Apache NetBeans 11 cycle is Apache NetBeans 11.0. Th
 - JavaScript parser is now correctly licensed and no longer needs to be installed separately: link:https://github.com/apache/netbeans/pull/1407[https://github.com/apache/netbeans/pull/1407]
 - Enhancement to the installer enables subsets of Apache NetBeans to be installed: https://github.com/apache/netbeans/pull/1505
 
-== Newly Introduced Features
+== Release Drivers
 
 === Java
 
@@ -61,11 +61,11 @@ The highlights of the enhancements and fixes are listed below.
 
 === Enhancements
 
-Gradle enhancements include being able to read the JDK's "--enable-preview": https://github.com/apache/netbeans/pull/1494
-Amazon-related updates: https://github.com/apache/netbeans/pull/1312
-LSP server for Java: https://github.com/apache/netbeans/pull/926
-HTML5 attribute syntax support: https://github.com/apache/netbeans/pull/1380
-Cleaned up Welcome Screen no longer refers to Oracle backends: https://github.com/apache/netbeans/pull/1457
+- Gradle enhancements include being able to read the JDK's "--enable-preview": link:https://github.com/apache/netbeans/pull/1494[https://github.com/apache/netbeans/pull/1494]
+- Amazon-related updates: link:https://github.com/apache/netbeans/pull/1312[https://github.com/apache/netbeans/pull/1312]
+- LSP server for Java: link:https://github.com/apache/netbeans/pull/926[https://github.com/apache/netbeans/pull/926]
+- HTML5 attribute syntax support: link:https://github.com/apache/netbeans/pull/1380[https://github.com/apache/netbeans/pull/1380]
+- Cleaned up Welcome Screen no longer refers to Oracle backends: link:https://github.com/apache/netbeans/pull/1457[https://github.com/apache/netbeans/pull/1457]
 
 === Fixes
 
