--- a/netbeans.apache.org/src/content/download/nb112/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb112/index.asciidoc
@@ -75,6 +75,6 @@ The highlights of the enhancements and fixes are listed below.
 
 == Notes
 
-- The donation of the C / C++ features from Oracle to Apache was not complete at the time of the 11.2 release, though it is not far off, and the 11.3 release (January 2020) is scheduled to focus primarily on the integration of the C/C++ features, once they land in the Apache NetBeans GitHub.
+- The donation of the C/Cplusplus-related features from Oracle to Apache was not complete at the time of the 11.2 release, though it is not far off, and the 11.3 release (January 2020) is scheduled to focus primarily on the integration of the C/C++ features, once they land in the Apache NetBeans GitHub.
 - WildFly integration is supported by means of the link:http://plugins.netbeans.org/plugin/76472/wildfly-application-server[WildFly Application Server] plugin located in the Plugin Portal.
 
