--- a/netbeans.apache.org/src/content/download/nb112/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb112/index.asciidoc
@@ -36,13 +36,6 @@ Apache NetBeans 11.2 is the second Apache NetBeans release outside the Apache In
 
 TIP: The LTS release of the Apache NetBeans 11 cycle is Apache NetBeans 11.0. The 11.1 and 11.2 releases have not been tested as heavily as the LTS release and may therefore be less stable. Use 11.2 to use the latest features and to provide feedback for the next LTS release, scheduled for April 2020. Go here to download  link:/download/nb110/nb110.html[Apache NetBeans 11.0], the current LTS release.
 
-== Release Highlights
-
-- JDK 13 support
-- PHP 7.4 support
-- JavaScript parser is now correctly licensed and no longer needs to be installed separately: link:https://github.com/apache/netbeans/pull/1407[https://github.com/apache/netbeans/pull/1407]
-- Enhancement to the installer enables subsets of Apache NetBeans to be installed: https://github.com/apache/netbeans/pull/1505
-
 == Release Drivers
 
 === Java
@@ -61,6 +54,10 @@ The highlights of the enhancements and fixes are listed below.
 
 === Enhancements
 
+- JavaScript parser is now correctly licensed and no longer needs to be installed separately: link:https://github.com/apache/netbeans/pull/1407[https://github.com/apache/netbeans/pull/1407]
+- Enhancement to the installer enables subsets of Apache NetBeans to be installed: https://github.com/apache/netbeans/pull/1505
+- Performance enhancement: link:https://github.com/apache/netbeans/pull/1430[https://github.com/apache/netbeans/pull/1430]
+- Upgraded Payara support to Payara Platform 5.193: link:https://github.com/apache/netbeans/pull/1470[https://github.com/apache/netbeans/pull/1470]
 - Gradle enhancements include being able to read the JDK's "--enable-preview": link:https://github.com/apache/netbeans/pull/1494[https://github.com/apache/netbeans/pull/1494]
 - Amazon-related updates: link:https://github.com/apache/netbeans/pull/1312[https://github.com/apache/netbeans/pull/1312]
 - LSP server for Java: link:https://github.com/apache/netbeans/pull/926[https://github.com/apache/netbeans/pull/926]
