--- a/netbeans.apache.org/src/content/download/nb112/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb112/index.asciidoc
@@ -58,7 +58,7 @@ The highlights of the enhancements and fixes are listed below.
 - Enhancement to the installer enables subsets of Apache NetBeans to be installed: https://github.com/apache/netbeans/pull/1505
 - Performance enhancement: link:https://github.com/apache/netbeans/pull/1430[https://github.com/apache/netbeans/pull/1430]
 - Upgraded Payara support to Payara Platform 5.193: link:https://github.com/apache/netbeans/pull/1470[https://github.com/apache/netbeans/pull/1470]
-- Gradle enhancements include being able to read the JDK's "--enable-preview": link:https://github.com/apache/netbeans/pull/1494[https://github.com/apache/netbeans/pull/1494]
+- Various Gradle enhancements, include being able to read JVM arguments, such as the JDK's "--enable-preview": link:https://github.com/apache/netbeans/pulls?q=is%3Apr+label%3AGradle+is%3Aclosed[https://github.com/apache/netbeans/pulls?q=is%3Apr+label%3AGradle+is%3Aclosed]
 - Amazon-related updates: link:https://github.com/apache/netbeans/pull/1312[https://github.com/apache/netbeans/pull/1312]
 - LSP server for Java: link:https://github.com/apache/netbeans/pull/926[https://github.com/apache/netbeans/pull/926]
 - HTML5 attribute syntax support: link:https://github.com/apache/netbeans/pull/1380[https://github.com/apache/netbeans/pull/1380]
@@ -74,4 +74,5 @@ The highlights of the enhancements and fixes are listed below.
 
 - The donation of the C/Cplusplus-related features from Oracle to Apache was not complete at the time of the 11.2 release, though it is not far off, and the 11.3 release (January 2020) is scheduled to focus primarily on the integration of the C/C++ features, once they land in the Apache NetBeans GitHub.
 - WildFly integration is supported by means of the link:http://plugins.netbeans.org/plugin/76472/wildfly-application-server[WildFly Application Server] plugin located in the Plugin Portal.
+- Support for JSF 2.3 is available as a pull request, too late for inclusion in 11.2, scheduled for 11.3: link:https://github.com/apache/netbeans/pull/1576[https://github.com/apache/netbeans/pull/1576]
 
