--- a/netbeans.apache.org/src/content/download/nb112/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb112/index.asciidoc
@@ -72,7 +72,7 @@ The highlights of the enhancements and fixes are listed below.
 
 == Notes
 
-- The donation of the NetBeans C/C++ features from Oracle to Apache was not complete at the time of the 11.2 release, though it is not far off, and the 11.3 release (January 2020) is scheduled to focus primarily on the integration of the C/C++ features, once they land in the Apache NetBeans GitHub.
+- The donation of the NetBeans C and C++ features from Oracle to Apache was not complete at the time of the 11.2 release, though it is not far off, and the 11.3 release (January 2020) is scheduled to focus primarily on the integration of the C and C++ features, once they land in the Apache NetBeans GitHub. Until then, go to the Plugin Manager, enable the NetBeans IDE 8.2 Update Center, which lets you install the NetBeans IDE 8.2 modules providing C and C++ features.
 - WildFly integration is supported by means of the link:http://plugins.netbeans.org/plugin/76472/wildfly-application-server[WildFly Application Server] plugin located in the Plugin Portal.
 - Support for JSF 2.3 is available as a pull request, too late for inclusion in 11.2, scheduled for 11.3: link:https://github.com/apache/netbeans/pull/1576[https://github.com/apache/netbeans/pull/1576]
 
