java and php content

--- a/netbeans.apache.org/src/content/download/nb112/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb112/index.asciidoc
@@ -40,11 +40,21 @@ TIP: The LTS release of the Apache NetBeans 11 cycle is Apache NetBeans 11.0. Th
 
 === Java
 
-The highlights of enhancements in the Java area are...
+The highlights of enhancements in the Java area are focused on support for JDK 13.
+
+- JEP 354: Switch Expressions (Preview Feature): link:https://openjdk.java.net/jeps/354[https://openjdk.java.net/jeps/354]
+- JEP 355: Text Blocks (Preview Feature): link:https://openjdk.java.net/jeps/355[https://openjdk.java.net/jeps/355]
 
 === PHP
 
-The highlights of enhancements in the PHP area are...
+The highlights of enhancements in the PHP area are focused on support for PHP 7.4.
+
+- PHP RFC: Typed Properties 2.0: link:https://wiki.php.net/rfc/typed_properties_v2[https://wiki.php.net/rfc/typed_properties_v2]
+- PHP RFC: Null Coalescing Assignment Operator: link:https://wiki.php.net/rfc/null_coalesce_equal_operator[https://wiki.php.net/rfc/null_coalesce_equal_operator]
+- PHP RFC: Spread Operator in Array Expression: link:https://wiki.php.net/rfc/spread_operator_for_array[https://wiki.php.net/rfc/spread_operator_for_array]
+- PHP RFC: Arrow Functions 2.0: link:https://wiki.php.net/rfc/arrow_functions_v2[https://wiki.php.net/rfc/arrow_functions_v2]
+PHP RFC: Numeric Literal Separator: link:https://wiki.php.net/rfc/numeric_literal_separator[https://wiki.php.net/rfc/numeric_literal_separator]
+- PHP RFC: New custom object serialization mechanism: link:https://wiki.php.net/rfc/custom_object_serialization[https://wiki.php.net/rfc/custom_object_serialization]
 
 == Enhancements and Fixes
 
