--- a/netbeans.apache.org/src/content/download/nb111/nb111.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb111/nb111.asciidoc
@@ -77,7 +77,7 @@ Apache NetBeans can also be installed as a self-contained link:https://snapcraft
 
 == Deployment platforms
 
-Apache NetBeans 11.1 runs on JDK 8, 9, 10, 11, and 12.
+Apache NetBeans 11.1 runs on JDK 8, 11, and 12.
 
 
 == Building from source
