--- a/netbeans.apache.org/src/content/download/nb110/nb110.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb110/nb110.asciidoc
@@ -69,7 +69,7 @@ video::vCN_XvXQzzo[youtube, title="The Rough Guide to Apache NetBeans 11.0"]
 
 == Deployment platforms
 
-Apache NetBeans 11.0 runs on JDK 8, 9, 10, 11, and 12.
+Apache NetBeans 11.0 runs on JDK 8, 11, and 12. (JDK 12 is the current JDK release at the time of this NetBeans release).
 
 == Building from source
 
