--- a/netbeans.apache.org/src/content/download/nb112/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb112/index.asciidoc
@@ -45,6 +45,8 @@ The highlights of enhancements in the Java area are focused on support for JDK 1
 - JEP 354: Switch Expressions (Preview Feature): link:https://openjdk.java.net/jeps/354[https://openjdk.java.net/jeps/354]
 - JEP 355: Text Blocks (Preview Feature): link:https://openjdk.java.net/jeps/355[https://openjdk.java.net/jeps/355]
 
+image::jdk13-textblock.png[]
+
 === PHP
 
 The highlights of enhancements in the PHP area are focused on support for PHP 7.4.
