--- a/netbeans.apache.org/src/content/download/nb112/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb112/index.asciidoc
@@ -43,9 +43,13 @@ TIP: The LTS release of the Apache NetBeans 11 cycle is Apache NetBeans 11.0. Th
 The highlights of enhancements in the Java area are focused on support for JDK 13.
 
 - JEP 354: Switch Expressions (Preview Feature): link:https://openjdk.java.net/jeps/354[https://openjdk.java.net/jeps/354]
+
+image::jdk13-yield.png[]
+
 - JEP 355: Text Blocks (Preview Feature): link:https://openjdk.java.net/jeps/355[https://openjdk.java.net/jeps/355]
 
 image::jdk13-textblock.png[]
+
 
 === PHP
 
