--- a/netbeans.apache.org/src/content/download/nb112/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb112/index.asciidoc
@@ -45,15 +45,22 @@ The highlights of enhancements in the Java area are focused on support for JDK 1
 - JEP 354: Switch Expressions (Preview Feature): link:https://openjdk.java.net/jeps/354[https://openjdk.java.net/jeps/354]
 
 image::jdk13-yield.png[]
+ 
+ 
 
 - JEP 355: Text Blocks (Preview Feature): link:https://openjdk.java.net/jeps/355[https://openjdk.java.net/jeps/355]
 
 image::jdk13-textblock.png[]
-
+ 
+ 
 
 === PHP
 
 The highlights of enhancements in the PHP area are focused on support for PHP 7.4.
+
+image::php-7.4.png[]
+
+Highlights of PHP 7.4 integration are listed below.
 
 - PHP RFC: Typed Properties 2.0: link:https://wiki.php.net/rfc/typed_properties_v2[https://wiki.php.net/rfc/typed_properties_v2]
 - PHP RFC: Null Coalescing Assignment Operator: link:https://wiki.php.net/rfc/null_coalesce_equal_operator[https://wiki.php.net/rfc/null_coalesce_equal_operator]
@@ -61,6 +68,8 @@ The highlights of enhancements in the PHP area are focused on support for PHP 7.
 - PHP RFC: Arrow Functions 2.0: link:https://wiki.php.net/rfc/arrow_functions_v2[https://wiki.php.net/rfc/arrow_functions_v2]
 PHP RFC: Numeric Literal Separator: link:https://wiki.php.net/rfc/numeric_literal_separator[https://wiki.php.net/rfc/numeric_literal_separator]
 - PHP RFC: New custom object serialization mechanism: link:https://wiki.php.net/rfc/custom_object_serialization[https://wiki.php.net/rfc/custom_object_serialization]
+
+Further details are provided link:https://cwiki.apache.org/confluence/display/NETBEANS/11.2+Feature%3A+PHP[here].
 
 == Enhancements and Fixes
 
