--- a/netbeans.apache.org/src/content/download/nb112/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb112/index.asciidoc
@@ -44,21 +44,26 @@ The highlights of enhancements in the Java area are focused on support for JDK 1
 
 - JEP 354: Switch Expressions (Preview Feature): link:https://openjdk.java.net/jeps/354[https://openjdk.java.net/jeps/354]
 
-image::jdk13-yield.png[]
- 
- 
+[.feature]
+--
+image::jdk13-yield.png[role="left", link="jdk13-yield.png"]
+-- 
 
 - JEP 355: Text Blocks (Preview Feature): link:https://openjdk.java.net/jeps/355[https://openjdk.java.net/jeps/355]
 
-image::jdk13-textblock.png[]
- 
- 
+[.feature]
+--
+image::jdk13-textblock.png[role="left", link="jdk13-textblock.png"]
+--  
 
 === PHP
 
 The highlights of enhancements in the PHP area are focused on support for PHP 7.4.
 
-image::php-7.4.png[]
+[.feature]
+--
+image::php-7.4.png[role="left", link="php-7.4.png"]
+--  
 
 Highlights of PHP 7.4 integration are listed below.
 
@@ -85,7 +90,6 @@ The highlights of the enhancements and fixes are listed below.
 - Upgraded Payara support to Payara Platform 5.193: link:https://github.com/apache/netbeans/pull/1470[https://github.com/apache/netbeans/pull/1470]
 - Various Gradle enhancements, include being able to read JVM arguments, such as the JDK's "--enable-preview": link:https://github.com/apache/netbeans/pulls?q=is%3Apr+label%3AGradle+is%3Aclosed[https://github.com/apache/netbeans/pulls?q=is%3Apr+label%3AGradle+is%3Aclosed]
 - Amazon-related updates: link:https://github.com/apache/netbeans/pull/1312[https://github.com/apache/netbeans/pull/1312]
-- LSP server for Java: link:https://github.com/apache/netbeans/pull/926[https://github.com/apache/netbeans/pull/926]
 - HTML5 attribute syntax support: link:https://github.com/apache/netbeans/pull/1380[https://github.com/apache/netbeans/pull/1380]
 - Cleaned up Welcome Screen no longer refers to Oracle backends: link:https://github.com/apache/netbeans/pull/1457[https://github.com/apache/netbeans/pull/1457]
 
