--- a/netbeans.apache.org/src/content/download/nb112/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb112/index.asciidoc
@@ -43,14 +43,12 @@ TIP: The LTS release of the Apache NetBeans 11 cycle is Apache NetBeans 11.0. Th
 The highlights of enhancements in the Java area are focused on support for JDK 13.
 
 - JEP 354: Switch Expressions (Preview Feature): link:https://openjdk.java.net/jeps/354[https://openjdk.java.net/jeps/354]
-
 [.feature]
 --
 image::jdk13-yield.png[role="left", link="jdk13-yield.png"]
 -- 
 
 - JEP 355: Text Blocks (Preview Feature): link:https://openjdk.java.net/jeps/355[https://openjdk.java.net/jeps/355]
-
 [.feature]
 --
 image::jdk13-textblock.png[role="left", link="jdk13-textblock.png"]
@@ -74,7 +72,7 @@ Highlights of PHP 7.4 integration are listed below.
 PHP RFC: Numeric Literal Separator: link:https://wiki.php.net/rfc/numeric_literal_separator[https://wiki.php.net/rfc/numeric_literal_separator]
 - PHP RFC: New custom object serialization mechanism: link:https://wiki.php.net/rfc/custom_object_serialization[https://wiki.php.net/rfc/custom_object_serialization]
 
-Further details are provided link:https://cwiki.apache.org/confluence/display/NETBEANS/11.2+Feature%3A+PHP[here].
+Further details on new support for PHP 7.4 features are provided link:https://cwiki.apache.org/confluence/display/NETBEANS/11.2+Feature%3A+PHP[here].
 
 == Enhancements and Fixes
 
