--- a/netbeans.apache.org/src/content/download/nb112/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb112/index.asciidoc
@@ -56,6 +56,27 @@ image::jdk13-yield.png[role="left", link="jdk13-yield.png"]
 image::jdk13-textblock.png[role="left", link="jdk13-textblock.png"]
 --  
 
+TIP: link:https://openjdk.java.net/jeps/12[JEP 12] provides for a preview language or VM feature, which "is a new feature of the Java SE Platform that is fully specified, fully implemented, and yet impermanent. It is available in a JDK feature release to provoke developer feedback based on real world use; this may lead to it becoming permanent in a future Java SE Platform.
+
+Preview features can only be used if the Java compiler's "--enable-preview" flag is set, as shown below for Maven. 
+
+[source,xml]
+----
+<build>
+   <plugins>
+      <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.0</version>
+          <configuration>
+              <compilerArgs>
+                    <arg>--enable-preview</arg>
+              </compilerArgs>
+         </configuration>
+     </plugin>
+  </plugins>
+</build>
+----
+
 === PHP
 
 The highlights of enhancements in the PHP area are focused on support for PHP 7.4.
