--- a/netbeans.apache.org/src/content/download/nb112/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb112/index.asciidoc
@@ -92,7 +92,7 @@ Highlights of PHP 7.4 integration are listed below.
 - PHP RFC: Null Coalescing Assignment Operator: link:https://wiki.php.net/rfc/null_coalesce_equal_operator[https://wiki.php.net/rfc/null_coalesce_equal_operator]
 - PHP RFC: Spread Operator in Array Expression: link:https://wiki.php.net/rfc/spread_operator_for_array[https://wiki.php.net/rfc/spread_operator_for_array]
 - PHP RFC: Arrow Functions 2.0: link:https://wiki.php.net/rfc/arrow_functions_v2[https://wiki.php.net/rfc/arrow_functions_v2]
-PHP RFC: Numeric Literal Separator: link:https://wiki.php.net/rfc/numeric_literal_separator[https://wiki.php.net/rfc/numeric_literal_separator]
+- PHP RFC: Numeric Literal Separator: link:https://wiki.php.net/rfc/numeric_literal_separator[https://wiki.php.net/rfc/numeric_literal_separator]
 - PHP RFC: New custom object serialization mechanism: link:https://wiki.php.net/rfc/custom_object_serialization[https://wiki.php.net/rfc/custom_object_serialization]
 
 Further details on new support for PHP 7.4 features are provided link:https://cwiki.apache.org/confluence/display/NETBEANS/11.2+Feature%3A+PHP[here].
